# taller2android

./: Dockerfile  README.md
AppServer/: .gitignore  .travis.yml  CMakeLists.txt  install.sh
AppServer/functionalTests/: restTest.cfg.sample  restTester.py  testCases.py
AppServer/lib/mongoose/: Controller.cpp  Controller.h  JsonController.h  Request.cpp  Request.h  RequestHandler.h
AppServer/lib/sha256/: sha256.h
AppServer/src/: main.cpp
AppServer/src/controllers/: BaseController.cpp  BaseController.h
AppServer/src/controllers/accounts/: AccountController.cpp  AccountController.h
AppServer/src/controllers/matchs/: MatchsController.cpp  MatchsController.h
AppServer/src/db/: Database.cpp  Database.h
AppServer/src/errors/: BadJsonError.h  EmptyParamError.h  Error.h  UnauthorizedError.h  UsernameAlreadyInUseError.h
AppServer/src/model/: AccessToken.cpp  AccessToken.h  Account.cpp  Account.h  Entity.cpp  Entity.h
AppServer/src/utils/: FileLogger.cpp  FileLogger.h  LockFile.cpp  LockFile.h  Utils.cpp  Utils.h
AppServer/test/: CMakeLists.txt  main.cpp
AppServer/test/model/: AccountTest.cpp  AccountTest.h  EntityTest.cpp  EntityTest.h
MatchApp/: settings.gradle
MatchApp/AndTinder/: build.gradle
MatchApp/AndTinder/src/main/: AndroidManifest.xml
MatchApp/AndTinder/src/main/java/com/andtinder/model/: CardModel.java
MatchApp/AndTinder/src/main/java/com/andtinder/view/: CardContainer.java  CardStackAdapter.java  SimpleCardStackAdapter.java
MatchApp/AndTinder/src/main/res/layout/: std_card_inner.xml
MatchApp/app/: build.gradle  proguard-rules.pro
MatchApp/app/src/androidTest/java/com/taller2/matchapp/: ApplicationTest.java
MatchApp/app/src/main/: AndroidManifest.xml
MatchApp/app/src/main/java/com/taller2/matchapp/: BaseActivity.java  LeftMenuActivity.java  LoginActivity.java  MainActivity.java  MatchActivity.java  MatchAdapter.java  MatchFragment.java  MyAdapter.java  NavigationDrawerFragment.java  ProfileDetailActivity.java  RegisterActivity.java  Session.java  SettingsActivity.java  SplashActivity.java
MatchApp/app/src/main/java/com/taller2/matchapp/api/: MatchAPI.java
MatchApp/app/src/main/java/com/taller2/matchapp/config/: Configuration.java  MatchAPI.java
MatchApp/app/src/main/java/com/taller2/matchapp/http/: MathAppJsonRequest.java  VolleyClient.java
MatchApp/app/src/main/java/com/taller2/matchapp/model/: Interest.java  Match.java  Message.java  Profile.java
MatchApp/app/src/main/java/com/taller2/matchapp/util/: ActivityIndicator.java  DateUtils.java  KeyboardUtils.java  LocationManager.java  OnRowClickListener.java  Serializable.java  SharedPreferencesEditor.java
MatchApp/app/src/main/res/drawable/: progress.xml
MatchApp/app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_match.xml  activity_register.xml  candidate_pager.xml  chat_activity.xml  drawer.xml  fragment_match.xml  fragment_match2.xml  fragment_navigation_drawer.xml  header.xml  interest_row.xml  item_row.xml  login_activity.xml  main_activity.xml  match_row.xml  mine_message_row.xml  other_message_row.xml  profile_detail_activity.xml  register_activity.xml  settings_activity.xml  splash_activity.xml  toolbar.xml
MatchApp/app/src/main/res/menu/: left_menu.xml  menu.xml  menu_match.xml  menu_register.xml
MatchApp/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  strings_activity_login.xml  styles.xml
MatchApp/gradle/wrapper/: gradle-wrapper.properties
documentacion/checkpoints/: Makefile
documentacion/checkpoints/source/: conf.py  index.rst~  manuals.rst  manuals.rst~
documentacion/manual-administrador/source/: manuals.rst  manuals.rst~
documentacion/manual-programador/source/: conf.py  conf.py~  manuals.rst
documentacion/manual-proyecto/source/: manuals.rst
documentacion/manual-usuario/source/: manuals.rst  manuals.rst~
documentacion/manuals/source/: manuals.rst  manuals.rst~
(+13 files in other folders)
